# dagster-dbt-project1

compte_b/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
compte_b/.dg/: telemetry.yaml
compte_b/analysis/: .user.yml  README.md  dbt_project.yml  profiles.yml
compte_b/analysis/models/: example.sql  schema.yml  sources.yml
compte_b/analysis/models/Staging/: schema.yml  stg_classed_data.sql  stg_operations.sql
compte_b/data/models/: latest_model_uri.txt  ml_model.joblib
compte_b/data/models/mlartifacts/a4b539b8b0f84ce2ab7f92d1c8337a69/artifacts/: classification_report.txt
compte_b/data/models/mlartifacts/b5ffb3eb36684cea81e6139dd8d08f73/artifacts/: classification_report.txt
compte_b/data/models/mlartifacts/models/m-1725a52bf6774a358fa1276f2cc8ddf7/artifacts/: MLmodel  conda.yaml  python_env.yaml
compte_b/data/models/mlartifacts/models/m-1e22d80eb787485d9a6a2ae62010ac40/artifacts/: MLmodel  conda.yaml  requirements.txt
compte_b/src/compte_b/: env_paths.py
compte_b/src/compte_b/defs/: jobs.py  project.py  resources.py  sqlite_bootstrap.py
compte_b/src/compte_b/defs/analysis/: defs.yaml
compte_b/src/compte_b/defs/assets/: Inference.py  Integration_SQLite.py  ML_model.py  assets.py  dbt.py
compte_b/streamlit/: app.py
compte_b/tests/: test_classed_data.py
