[project]
name = "compte_b"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.19",
    "dagster-dbt>=0.28.19",
    "dagster-duckdb>=0.28.19",
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "duckdb>=1.5.0",
    "mlflow>=3.10.1",
    "nltk>=3.9.4",
    "openpyxl>=3.1.5",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "jupyter>=1.1.1",
    "ipykernel>=7.2.0",
    "datasette>=0.65.2",
    "docker>=7.1.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "compte_b"
registry_modules = [
    "compte_b.components.*",
]


